package creational._2_factory_method.object;

public interface Computer {
	void boot();
}
